* app/widgets/gimpviewrenderervectors.h: GimpViewRendererVector is   really derived from GimpViewRenderer and not from GimpViewRendererDrawable.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14496 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-26  DindinX  <david@dindinx.org>
 
+	* app/widgets/gimpviewrenderervectors.h: GimpViewRendererVector is
+	really derived from GimpViewRenderer and not from
+	GimpViewRendererDrawable.
+
+2004-08-26  DindinX  <david@dindinx.org>
+
 	* app/widgets/gimppreviewrenderer-utils.c
 	* app/widgets/gimppreviewrenderer-utils.h
 	* app/widgets/gimppreviewrendererbrush.c
