2004-08-26  Michael Natterer  <mitch@gimp.org>
	* app/core/gimpitem.c (gimp_item_stroke): implement the whole
	paint_options fiddling here instead of in each subclass and pass
	either GimpStrokeOptions or GimpPaintOptions (instead of
	GimpStrokeOptions or GimpPaintInfo) to GimpItem::stroke().

	Also copied code (that needs to be abstracted to a utility
	function) from the tool_manager which makes sure we really use the
	global brush, pattern etc. if these options are checked in prefs.
	Fixes bug #150716.

	* app/core/gimpchannel.c (gimp_channel_stroke)
	* app/vectors/gimpvectors.c (gimp_vectors_stroke): removed the
	duplicated code mentioned above and simply use the paint_options
	passed.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14498 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2004-08-26  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpitem.c (gimp_item_stroke): implement the whole
+	paint_options fiddling here instead of in each subclass and pass
+	either GimpStrokeOptions or GimpPaintOptions (instead of
+	GimpStrokeOptions or GimpPaintInfo) to GimpItem::stroke().
+
+	Also copied code (that needs to be abstracted to a utility
+	function) from the tool_manager which makes sure we really use the
+	global brush, pattern etc. if these options are checked in prefs.
+	Fixes bug #150716.
+
+	* app/core/gimpchannel.c (gimp_channel_stroke)
+	* app/vectors/gimpvectors.c (gimp_vectors_stroke): removed the
+	duplicated code mentioned above and simply use the paint_options
+	passed.
+
 2004-08-26  DindinX  <david@dindinx.org>
 
 	* app/widgets/gimpviewrenderervectors.h: GimpViewRendererVector is
