--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2004-08-26  Michael Natterer  <mitch@gimp.org>
 
+	* app/core/gimpitem.[ch]: removed "gboolean use_default_values"
+	from GimpItem::stroke().
+
+	* app/core/gimpchannel.c
+	* app/core/gimpselection.c
+	* app/vectors/gimpvectors.c: changed accordingly.
+
+2004-08-26  Michael Natterer  <mitch@gimp.org>
+
 	* app/core/gimpitem.c (gimp_item_stroke): implement the whole
 	paint_options fiddling here instead of in each subclass and pass
 	either GimpStrokeOptions or GimpPaintOptions (instead of
