--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-26  Sven Neumann  <sven@gimp.org>
+
+	* Makefile.am
+	* fortunes.xsl: added simple XSL transformation to generate
+	fortunes for wiki.gimp.org from gimp-tips.xml.in.
+
 2004-08-24  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am (tips_POFILES): added pa.po (Punjabi).
