2004-08-26  Sven Neumann  <sven@gimp.org>
	* fortunes.xsl: fixed Wiki syntax in output.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14502 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-26  Sven Neumann  <sven@gimp.org>
 
+	* fortunes.xsl: fixed Wiki syntax in output.
+
+2004-08-26  Sven Neumann  <sven@gimp.org>
+
 	* Makefile.am
 	* fortunes.xsl: added simple XSL transformation to generate
 	fortunes for wiki.gimp.org from gimp-tips.xml.in.
