added missing file.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14507 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 	* app/pdb/Makefile.am
 	* libgimp/Makefile.am: changed accordingly.
 
+	* app/pdb/progress_cmds.c
 	* libgimp/gimpprogress_pdb.[ch]: new generated files.
 
 	* app/pdb/internal_procs.c
