2004-08-27  Sven Neumann  <sven@gimp.org>
	* de.po: merged fixes from stable branch.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14509 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-27  Sven Neumann  <sven@gimp.org>
+
+	* de.po: merged fixes from stable branch.
+
 2004-08-13  Tommi Vainikainen  <thv@iki.fi>
 
 	* fi.po: Unified some fields in po headers for Finnish team.
