2004-08-28  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimphelp-ids.h
	* app/widgets/gimptoolbox.c (toolbox_create_image_area): added a
	help-id for the image area.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14510 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-28  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimphelp-ids.h
+	* app/widgets/gimptoolbox.c (toolbox_create_image_area): added a
+	help-id for the image area.
+
 2004-08-27  Michael Natterer  <mitch@gimp.org>
 
 	Moved the gimp_progress_init() and gimp_progress_update() PDB
