--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,15 @@
 2004-08-28  Sven Neumann  <sven@gimp.org>
 
+	* app/core/gimpimage-contiguous-region.c
+	(find_contiguous_region_helper): applied a patch from Eric Cheung
+	that changes the function to use a GQueue to implement recursion
+	instead of recursive function calls. Fixes bug #151124.
+
+	* plug-ins/common/noisify.c (noisify_dialog): left-align the
+	preview.
+
+2004-08-28  Sven Neumann  <sven@gimp.org>
+
 	* app/widgets/gimphelp-ids.h
 	* app/widgets/gimptoolbox.c (toolbox_create_image_area): added a
 	help-id for the image area.
