2004-08-28  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/compose.c (compose_dialog): applied patch from
	Markus Triska that improves which layers are choosen by
	default (bug #148172).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14514 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-08-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/compose.c (compose_dialog): applied patch from
+	Markus Triska that improves which layers are choosen by
+	default (bug #148172).
+
+2004-08-28  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage-contiguous-region.c
 	(find_contiguous_region_helper): applied a patch from Eric Cheung
 	that changes the function to use a GQueue to implement recursion
