2004-08-28  Sven Neumann  <sven@gimp.org>
        * libgimpwidgets/libgimpwidgets-sections.txt
        * libgimpwidgets/tmpl/gimpwidgets.sgml:
        added gimp_scale_entry_[get|set]_logarithmic().


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14516 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-28  Sven Neumann  <sven@gimp.org>
+
+	* libgimpwidgets/libgimpwidgets-sections.txt
+	* libgimpwidgets/tmpl/gimpwidgets.sgml:
+	added gimp_scale_entry_[get|set]_logarithmic().
+
 2004-08-26  Michael Natterer  <mitch@gimp.org>
 
 	* app/app-docs.sgml
