2004-08-28  Simon Budig  <simon@gimp.org>
	* plug-ins/common/plugindetails.c: workaround to avoid a warning
	by gcc about the use of "%c" in the format string.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14517 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-28  Simon Budig  <simon@gimp.org>
+
+	* plug-ins/common/plugindetails.c: workaround to avoid a warning
+	by gcc about the use of "%c" in the format string.
+
 2004-08-28  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.[ch]: applied a patch from Joao
