--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-28  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/vpropagate.c (run): fixed confusion about which
+	mode to use when being run with last values (bug #151308).
+
 2004-08-28  Simon Budig  <simon@gimp.org>
 
 	* plug-ins/common/plugindetails.c: workaround to avoid a warning
