2004-08-29  Michael Schumacher <schumaml@cvs.gnome.org>
	* libgimpwidgets/gimpwidgets.def: added
	gimp_scale_entry_set_logarithmic


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14527 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-29  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimpwidgets/gimpwidgets.def: added 
+	gimp_scale_entry_set_logarithmic
+
 2004-08-29  Sven Neumann  <sven@gimp.org>
 
 	* app/config/gimpconfigwriter.c: don't emit critical warnings
