--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-29  Manish Singh  <yosh@gimp.org>
+
+	* app/plug-in/plug-in.c (plug_in_open): set can_recurse on the
+	recv_message watch, so we don't block on recursive calls to the
+	handler. plug_in_recv_message needs some refcounting help now
+	though.
+
 2004-08-29  Helvetix Victorinox  <helvetix@gimp.org>
 
 	* app/composite/gimp-composite-x86.h
