--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-30  Sven Neumann  <sven@gimp.org>
+
+	* app/tools/gimpvectortool.[ch] (gimp_vector_tool_status_set):
+	avoid extensive use of strdup() and strcmp(). The strings are all
+	constant anyway.
+
 2004-08-30  Michael Natterer  <mitch@gimp.org>
 
 	Brought the PDB progress into a working state. Fixes bug #6010,
