2004-08-30  Michael Natterer  <mitch@gimp.org>
	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpplugin.sgml
	* libgimp/tmpl/gimpprogress.sgml: moved remaining progress stuff
	from "Plug-In" to "Progress".


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14536 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,10 @@
+2004-08-30  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpplugin.sgml
+	* libgimp/tmpl/gimpprogress.sgml: moved remaining progress stuff
+	from "Plug-In" to "Progress".
+
 2004-08-30  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/libgimp-docs.sgml
