2004-08-30  Manish Singh  <yosh@gimp.org>
        * libgimp/gimpprogress.[ch] (gimp_progress_uninstall): return the
        user_data pointer on uninstall. Eases language binding work.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14537 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-30  Manish Singh  <yosh@gimp.org>
+
+	* libgimp/gimpprogress.[ch] (gimp_progress_uninstall): return the
+	user_data pointer on uninstall. Eases language binding work.
+
 2004-08-30  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpbrushmenu.c (gimp_brush_select_preview_draw): fixed
