--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-08-30  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/colortoalpha.c
+	* plug-ins/common/compose.c
+	* plug-ins/common/decompose.c
+	* plug-ins/common/film.c
+	* plug-ins/fits/fits.c: always use the progress API, not doing it
+	in non-interactive mode has always been wrong.
+
 2004-08-30  Manish Singh  <yosh@gimp.org>
 
 	* libgimp/gimpprogress.[ch] (gimp_progress_uninstall): return the
