--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-30  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimpprogress.c: added some gtk-doc comments, could be
+	improved further.
+
+2004-08-30  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/colortoalpha.c
 	* plug-ins/common/compose.c
 	* plug-ins/common/decompose.c
