2004-08-30  Michael Natterer  <mitch@gimp.org>
	* libgimp/gimpregioniterator.c: always update the progress.
	Makes all "run_mode" parameters useless.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14541 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-08-30  Michael Natterer  <mitch@gimp.org>
 
+	* libgimp/gimpregioniterator.c: always update the progress.
+	Makes all "run_mode" parameters useless.
+
+2004-08-30  Michael Natterer  <mitch@gimp.org>
+
 	* plug-ins/common/gauss.c: add "..." to the progress text.
 
 2004-08-30  Sven Neumann  <sven@gimp.org>
