2004-08-30  Sven Neumann  <sven@gimp.org>
	* libgimp/gimpregioniterator.c: document the fact that "run_mode"
	is unused. Also did some code cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14542 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-30  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpregioniterator.c: document the fact that "run_mode"
+	is unused. Also did some code cleanup.
+
 2004-08-30  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/gimpregioniterator.c: always update the progress.
