2004-08-30  Michael Schumacher <schumaml@cvs.gnome.org>
	* libgimp/gimp.def: added gimp_progress_install &
	gimp_progress_uninstall


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@14543 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-30  Michael Schumacher <schumaml@cvs.gnome.org>
+
+	* libgimp/gimp.def: added gimp_progress_install &
+	gimp_progress_uninstall	 
+
 2004-08-30  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimpregioniterator.c: document the fact that "run_mode"
