--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: added libgimpwidgets/gimppreview.c.
+
+	* de.po: updated german translation.
+
 2004-08-13  Tommi Vainikainen  <thv@iki.fi>
 
 	* fi.po: Unified some fields in po headers for Finnish team.
