--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-31  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimpdrawablepreview.[ch]
+	* libgimpwidgets/gimppreview.[ch]: minor code cleanup, fixes to
+	gtk-doc comments and to the handling of object properties.
+
 2004-08-31  DindinX  <david@dindinx.org>
 
 	* libgimpwidgets/gimppreview.c
